--- a/src/preferenceView.html
+++ b/src/preferenceView.html
@@ -5,8 +5,8 @@
   <link rel="stylesheet" href="mainLayout.css" />
 
   <!-- Load any supplemental Javascript libraries here -->
-  <script type="text/javascript" src="external_js/jquery-1.9.0.min.js"></script>
-  <script src="lodash.core.js"></script>
+  <script type="text/javascript" src="jquery-1.12.2.js"></script>
+  <script src="lodash.js"></script>
   <script type="text/javascript" src="classroom.js"></script>
   <script type="text/javascript">
 
