Fix typo, fixing column widths.

--- a/src/grid-layout.html
+++ b/src/grid-layout.html
@@ -14,11 +14,11 @@ table {
     width: 60%;
     border-collapse: collapse;
 }
-table td.name {
+table td.student_name {
     width: 20%;
 }
 table td {
-    width: 40%;
+    width: 38%;
     vertical-align: top;
     border: 1px solid gray;
     padding: 2px 2px;
@@ -29,7 +29,7 @@ table th {
 }
 
 table td.remove {
-    width: 5em;
+    width: 4%;
     vertical-align: middle;
     text-align: center;
 }
