--- a/src/grid-layout.html
+++ b/src/grid-layout.html
@@ -1,5 +1,7 @@
 <script src="https://code.jquery.com/jquery-2.2.3.js" integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4=" crossorigin="anonymous"></script>
 <script src="lodash.js"></script>
+<script type="text/javascript" src="jquery-1.12.2.js"></script>
+<script type="text/javascript" src="classroom.js"></script>
 <link href='https://fonts.googleapis.com/css?family=Cabin:400,700' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
 
@@ -74,6 +76,8 @@ table td input {
     </table>
 </body>
 <script>
+
+/**
 var studentNames = ["Berk Ustun", "Nick M.", "David Bau", 
                     "Frederick", "George W.", "Shruti", 
                     "Rita", "Wendy", "Jenna", "Alice",
@@ -89,27 +93,115 @@ function samplePreferences(nSamples){
     }
     return _.sampleSize(studentNames, nSamples);
 }
+**/
 
+  var parseStudentList = function() {
+    console.log("e"+$("#newstudentbox").val());
+    var student_list = $("#newstudentbox").val();
+    var student_array = student_list.split(",");
+    console.log(student_array);
+    for (var i = 0; i < student_array.length; i++) {
+      var s = student_array[i].trim();
+      if (classroom.findStudentNamed(student_array[i].trim()) == null) {
+        if (s != "") {
+            console.log('adding');
+          classroom.addStudent({name: student_array[i].trim(), avoid:[], prefer: []});
+        }
+      }
+    }
+  };
 
-function addRow() {
+var loadTable = function(classroom) {
+    $('table tbody').empty()
+    for (var i = 0; i < classroom.getStudentCount(); i++) {
+        addRow(classroom.getStudent(i));
+    }
+    addLastRow();
+    $("#newstudentbox").focus();
+}
+
+function addRow(student) {
     var row = $('<tr>');
-    $('<td class="student_name">').appendTo(row).html('<p>' + sampleName() +'</p>')
+    $('<td class="student_name">').appendTo(row).html('<p>' + student.name +'</p>')
+
+    var preferhtml = ""
+    for (i = 0; i < student.prefer; i++) {
+        preferhtml += '<p>' + student.prefer[i] + '<span></span></p>'
+    }
+
+
+    var avoidhtml = ""
+    for (i = 0; i < student.avoid; i++) {
+        avoidhtml += '<p>' + student.avoid[i] + '<span></span></p>'
+    }
+
+    $('<td class="pair_with">').appendTo(row).html(preferhtml);
+    $('<td class="dont_pair_with">').appendTo(row).html(avoidhtml);
+
+/**
     $('<td class="pair_with">').appendTo(row).html(
-        samplePreferences().map(function(n) { return '<p>' + n + '<span></span></p>'; }).join()
+        samplePreferences().map(function(student.prefer) { return '<p>' + student.prefer + '<span></span</p>'; }).join()
     );
+
     $('<td class="dont_pair_with">').appendTo(row).html(
-        samplePreferences().map(function(n) { return '<p>' + n + '<span></span</p>'; }).join()
-    );
-    $('<td class="remove">').appendTo(row);
+        samplePreferences().map(function(student.avoid) { return '<p>' + student.avoid + '<span></span</p>'; }).join()
+    );**/
+
+
+    $('<td id="'+student.sid+'" class="remove">').appendTo(row);
     $('table tbody').append(row);
 }
-for (var j = 0; j < 10; ++j) {
-    addRow();
-}
+
 function addLastRow() {
     var row = $('<tr>');
-    $('<td class="student_name" colspan="4">').appendTo(row).html('<input placeholder="Enter new student names">');
+    $('<td class="student_name" colspan="4">').appendTo(row).html('<input id= "newstudentbox" placeholder="Enter new student names">');
     $('table tbody').append(row);
 }
-addLastRow();
+
+
+
+
+
+
+
+$(document).ready(function() {
+
+    classroom = new Classroom();
+
+    loadTable(classroom);    
+
+    $("#preferenceButton").click(function(e) {
+      toggleView();
+      toggleButtonText();
+  });
+
+    $(document).on('click', ".remove", function(e) {
+      console.log('removal detected');
+      var student_id = $(this).attr('id');
+      console.log(student_id);
+      classroom.removeStudent(student_id);
+    });
+
+    $(document).on('keyup', ".add", function(e) {
+      if (e.which == 13) {
+        var new_student = $(".add").val();
+        classroom.addStudent({name: new_student, avoid:[], prefer:[]});
+      }
+    });
+
+    //$(document).on('click', "#groupem", parseStudentList());
+
+    $(document).on('keyup', "#newstudentbox", function(e) {
+      if (e.which == 13) {
+        parseStudentList();
+        $("#newstudentbox").val("");
+      }
+    })
+
+    $(classroom).on('changestudents', function() {
+        console.log('loading');
+      loadTable(classroom);
+  });
+
+});
 </script>
