Fix another typo.

--- a/src/grid-layout.html
+++ b/src/grid-layout.html
@@ -140,13 +140,13 @@ function addRow(student) {
 
 /**
     $('<td class="pair_with">').appendTo(row).html(
-        samplePreferences().map(function(student.prefer) { return '<p>' + student.prefer + '<span></span</p>'; }).join()
+        samplePreferences().map(function(student.prefer) { return '<p>' + student.prefer + '<span></span></p>'; }).join(' ')
     );
 
     $('<td class="dont_pair_with">').appendTo(row).html(
-        samplePreferences().map(function(student.avoid) { return '<p>' + student.avoid + '<span></span</p>'; }).join()
-    );**/
-
+        samplePreferences().map(function(student.avoid) { return '<p>' + student.avoid + '<span></span></p>'; }).join(' ')
+    );
+**/
 
     $('<td id="'+student.sid+'" class="remove">').appendTo(row);
     $('table tbody').append(row);
@@ -157,12 +157,6 @@ function addLastRow() {
     $('<td class="student_name" colspan="4">').appendTo(row).html('<input id= "newstudentbox" placeholder="Enter new student names">');
     $('table tbody').append(row);
 }
-<<<<<<< HEAD
-
-
-
-
-
 
 
 $(document).ready(function() {
@@ -206,7 +200,3 @@ $(document).ready(function() {
 
 });
 </script>
-=======
-addLastRow();
-</script>
->>>>>>> ef4d7f36d61eef79f84b359d46a34dbbeba9914d
