--- a/src/grid-layout.html
+++ b/src/grid-layout.html
@@ -96,10 +96,10 @@ function samplePreferences(nSamples){
 **/
 
   var parseStudentList = function() {
-    console.log("e"+$("#newstudentbox").val());
     var student_list = $("#newstudentbox").val();
+    student_list = student_list.replace(/\n/g, ',');
+    student_list = student_list.replace(/;/g, ',');
     var student_array = student_list.split(",");
-    console.log(student_array);
     for (var i = 0; i < student_array.length; i++) {
       var s = student_array[i].trim();
       if (classroom.findStudentNamed(student_array[i].trim()) == null) {
@@ -159,14 +159,7 @@ function addLastRow() {
     $('<td class="student_name" colspan="4">').appendTo(row).html('<input id= "newstudentbox" placeholder="Enter new student names">');
     $('table tbody').append(row);
 }
-<<<<<<< HEAD
 
-
-
-
-
-=======
->>>>>>> 4308aa6abacfb94d6dc4b269c3b7ec17e6451247
 
 
 $(document).ready(function() {
