--- a/src/group-layout.html
+++ b/src/group-layout.html
@@ -85,7 +85,6 @@ function removeNodeFromCluster(node) {
   var clusterRep = repId(node.cluster);
   node.cluster.nodes = nodeSiblings(node);
   node.cluster = null;
-  $(this).trigger({type: 'remove', node: node.ndata, cluster: clusterRep});
   invalidate();
 }
 
@@ -233,14 +232,14 @@ var splitDistance = 30;
 
 function nodedrag() {
   if (!state.nodedrag) {
-    state.nodedrag = d3.behavior.drag().on('dragstart.force', function(d) {
+    state.nodedrag = d3.behavior.drag().on('dragstart.cluster', function(d) {
       d.fixed |= 2 | fixedAfterDrag;
       nodeSiblings(d).map(function(d2) {
         d2.fixed |= 2;
         d2.px = d2.x;
         d2.py = d2.y;
       });
-    }).on('drag.force', function(d) {
+    }).on('drag.cluster', function(d) {
       d.px += d3.event.dx;
       d.py += d3.event.dy;
       if (d.cluster && d.cluster.nodes.length == 1) {
@@ -248,7 +247,7 @@ function nodedrag() {
         d.cluster.y = d.py;
       }
       state.force.resume();
-    }).on('dragend.force', function(d) {
+    }).on('dragend.cluster', function(d) {
       d.fixed &= ~2;
       nodeSiblings(d).map(function(d2) {
         d2.fixed &= ~2;
@@ -277,12 +276,12 @@ function initClusterCoords(cluster) {
 
 function linkdrag() {
   if (!state.linkdrag) {
-    state.linkdrag = d3.behavior.drag().on('dragstart.force', function(d) {
+    state.linkdrag = d3.behavior.drag().on('dragstart.cluster', function(d) {
       initClusterCoords(d.source.cluster);
       d.source.cluster.nodes.map(function(n) {
         n.fixed |= 2;
       });
-    }).on('drag.force', function(d) {
+    }).on('drag.cluster', function(d) {
       d.source.cluster.x += d3.event.dx;
       d.source.cluster.y += d3.event.dy;
       d.source.cluster.nodes.map(function(n) {
@@ -290,7 +289,7 @@ function linkdrag() {
         n.py += d3.event.dy;
       });
       state.force.resume();
-    }).on('dragend.force', function(d) {
+    }).on('dragend.cluster', function(d) {
       d.source.cluster.nodes.map(function(n) {
         n.fixed &= ~2;
       });
